fix bug segunda entrega